--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -15,6 +15,12 @@
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
 
+android {
+    androidResources {
+        noCompress 'tflite'
+    }
+}
+
 dependencies {
     implementation 'org.ftclib.ftclib:core:1.2.1'
     implementation project(':FtcRobotController')
